# StudyWithCards

./: .pylintrc  pyproject.toml
mysite/: manage.py
mysite/data/: db.sqlite3
mysite/static/css/: base_page.css  cards_creation.css  cards_study.css  home.css  sign_in.css  sign_up.css
mysite/static/css/inner_elements/: card.css  modal.css
mysite/static/js/: base_page.js  cards_creation.js  cards_study.js  home.js  sign_in.js  sign_up.js
mysite/study_with_cards_app/: apps.py  backends.py  models.py
mysite/study_with_cards_app/migrations/: 0001_initial.py  0002_user_avatar.py  0003_verificationcode.py  0004_delete_verificationcode.py  0005_alter_user_email.py  0006_alter_user_avatar_cardset_card.py  0007_alter_card_definition_alter_card_term.py  0008_alter_card_definition_alter_cardset_name.py  0009_remove_cardset_bg_color_alter_card_definition_and_more.py  0010_remove_card_created_at_remove_cardset_created_at_and_more.py  0011_remove_card_is_answered.py
mysite/study_with_cards_site/: asgi.py  forms.py  settings.py  urls.py  views.py  wsgi.py
mysite/templates/: base_page.html  cards_creation.html  cards_study.html  home.html  sign_in.html  sign_up.html
mysite/templates/inner_templates/: card.html  modal.html
