[project]
name = "studywithcards"
version = "0.1.0"
description = "web-service for studying"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
license = {text = "MIPT"}
readme = "README.md"
requires-python = "3.13"
dependencies = [
    "django (>=5.2,<6.0)",
    "pillow (>=11.1.0,<12.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pylint = "^3.3.6"

